<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterRollNo"/>


    <EditText
        android:id="@+id/rollNoEditPassword"
        android:layout_width="200dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterOldPassword"/>


    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="200dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterNewPassword"/>


    <EditText
        android:id="@+id/newPassword"
        android:layout_width="200dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_buttonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_change"/>

        <Button
            android:id="@+id/dialog_buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"/>

    </LinearLayout>


</LinearLayout>